--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
   "node_modules/nuxt/dist/app/entry.mjs": {
-    "file": "_nuxt/entry.6102a500.mjs",
+    "file": "nuxt/entry.e569dd40.mjs",
     "src": "node_modules/nuxt/dist/app/entry.mjs",
     "isEntry": true,
     "dynamicImports": [
@@ -10,11 +10,11 @@
       "layouts/default.vue"
     ],
     "css": [
-      "_nuxt/entry.f844ae73.css"
+      "nuxt/entry.f3f80bb6.css"
     ]
   },
   "virtual:nuxt:C:/Users/dell/Desktop/studyProjects/CarPlatesWeb/.nuxt/error-component.mjs": {
-    "file": "_nuxt/error-component.85100218.mjs",
+    "file": "nuxt/error-component.475c7a02.mjs",
     "src": "virtual:nuxt:C:/Users/dell/Desktop/studyProjects/CarPlatesWeb/.nuxt/error-component.mjs",
     "isDynamicEntry": true,
     "imports": [
@@ -26,7 +26,7 @@
     ]
   },
   "pages/db.vue": {
-    "file": "_nuxt/db.c44e433d.mjs",
+    "file": "nuxt/db.4a618278.mjs",
     "src": "pages/db.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -34,7 +34,7 @@
     ]
   },
   "pages/index.vue": {
-    "file": "_nuxt/index.9543aacb.mjs",
+    "file": "nuxt/index.41b126be.mjs",
     "src": "pages/index.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -42,52 +42,52 @@
     ]
   },
   "layouts/default.vue": {
-    "file": "_nuxt/default.8a0cddd7.mjs",
+    "file": "nuxt/default.c637aa4b.mjs",
     "src": "layouts/default.vue",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ],
     "css": [
-      "_nuxt/default.6d07810d.css"
+      "nuxt/default.679668fe.css"
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue": {
-    "file": "_nuxt/error-404.b1f96ee8.mjs",
+    "file": "nuxt/error-404.80a4e2d5.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ],
     "css": [
-      "_nuxt/error-404.7729cee9.css"
+      "nuxt/error-404.7729cee9.css"
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue": {
-    "file": "_nuxt/error-500.5d97d5c1.mjs",
+    "file": "nuxt/error-500.37fca743.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ],
     "css": [
-      "_nuxt/error-500.08851880.css"
+      "nuxt/error-500.08851880.css"
     ]
   },
   "node_modules/nuxt/dist/app/entry.css": {
-    "file": "_nuxt/entry.f844ae73.css",
+    "file": "nuxt/entry.f3f80bb6.css",
     "src": "node_modules/nuxt/dist/app/entry.css"
   },
   "layouts/default.css": {
-    "file": "_nuxt/default.6d07810d.css",
+    "file": "nuxt/default.679668fe.css",
     "src": "layouts/default.css"
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-500.css": {
-    "file": "_nuxt/error-500.08851880.css",
+    "file": "nuxt/error-500.08851880.css",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.css"
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.css": {
-    "file": "_nuxt/error-404.7729cee9.css",
+    "file": "nuxt/error-404.7729cee9.css",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.css"
   }
 }
