--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nuxtjs/tailwindcss": "^5.3.2",
     "@vueuse/core": "^9.1.0",
     "@vueuse/nuxt": "^9.1.0",
-    "nuxt": "3.0.0-rc.8",
+    "nuxt": "npm:nuxt3@latest",
     "sass": "^1.54.5"
   }
 }
