--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "devDependencies": {
     "@intlify/nuxt3": "^0.2.3",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@nuxt/content": "^2.0.1",
     "@nuxt/image-edge": "^1.0.0-27657146.da85542",
     "@nuxtjs/tailwindcss": "^5.3.2",
+    "@types/markdown-it": "^12.2.3",
     "@vueuse/core": "^9.1.0",
     "@vueuse/nuxt": "^9.1.0",
     "nuxt": "npm:nuxt3@latest",
